# generalize-config

./: README.md  black.sh  flake8.sh  isort.cfg  isort.sh  mypy.sh  project.dic  pytest.ini  python  requirements.main.txt  requirements.test.txt  setup.cfg  uninstall.sh
generalize_config/: __init__.py  config_file.py  generalize.py  read_config.py
generalize_config/inspect/: member.py
generalize_config/namespace/: join.py  merge.py  strip.py  types.py
generalize_config/parser/: cfg_parse.py  dict_parse.py  env_parse.py  json_parse.py  yaml_parse.py
tester/: test_config_file_ini.py  test_config_file_json.py  test_config_file_yaml.py
tester/namespace/: test_join.py  test_merge.py  test_strip.py
tester/parser/: test_cfg_parse.py  test_dict_parse.py  test_env_parse.py  test_env_parse_os_envs.py  test_json_parse.py  test_yaml_parse.py
tester/read_config/: test_complex.py  test_generalize.py  test_ini.py  test_json.py  test_yaml.py
